[package]
name = "rusty-python"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_python"
crate-type = ["cdylib"]

[dependencies]
colored = "2.0.0"
futures = "0.3.25"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }